--- a/SSA glmmTMB.Rmd
+++ b/SSA glmmTMB.Rmd
@@ -29,78 +29,7 @@ packages <- c("amt", "lubridate", "mgcv", "survival", "terra", "raster", "tictoc
 walk(packages, require, character.only = T)
 
 ```
-Import buffalo telemetry data
-
-```{r message = FALSE}
-
-# buffalo_CLR <- read_csv(file = "outputs/buffalo_parametric_indv_covs_20230208.csv")
-# using the population estimate as the TENTATIVE distribution will make it easier to estimate the weighted mean estimate of the movement kernel
-buffalo_data <- read_csv(file = "outputs/buffalo_parametric_popn_covs_20230208.csv")
-
-unique(buffalo_data$id)
-
-# scaling_mean <- mean(values(ndvi_projected[[7]], na.rm = TRUE)) # 0.4054526 for July 2018
-# scaling_sd <- sd(values(ndvi_projected[[7]], na.rm = TRUE)) # 0.1113644 for July 2018
-
-buffalo_CLR <- buffalo_data %>% 
-  mutate(id_num = as.numeric(factor(id)), 
-         step_id = step_id_, 
-         x1 = x1_, x2 = x2_, 
-         y1 = y1_, y2 = y2_, 
-         t1 = t1_, 
-         t1_rounded = round_date(buffalo_data$t1_, "hour"), 
-         t2 = t2_, 
-         yday = yday(t1_),
-         sl = sl_, log_sl = log_sl_, 
-         ta = ta_, cos_ta = cos_ta_,
-         year = year(t1_), 
-         month = month(t1_), 
-         # month_factor = factor(month(t1_)),
-         hour = hour(t1_),
-         # hour_factor = factor(hour),
-         # day = day(t1_),
-         # day_factor = factor(day(t1_)),
-         # step_id_factor = factor(step_id_),
-         ndvi_scaled = scale(ndvi_temporal),
-         ndvi_scaled_raster = ((ndvi_temporal - 0.4054526) / 0.1113644),
-         canopy_01 = canopy_cover/100,
-         herby_scaled = scale(veg_herby),
-         canopy_scaled = scale(canopy_01),
-         elev_scaled = scale(DEM_H_end),
-         elev_delta_scaled = scale(elev_delta),
-         elev_log_scaled = scale(elev_log),
-         slope_scaled = scale(slope_end),
-         month_s1 = sin(2*pi*month/12),
-         month_s2 = sin(4*pi*month/12),
-         month_s3 = sin(6*pi*month/12),
-         month_s4 = sin(8*pi*month/12),
-         month_c1 = cos(2*pi*month/12),
-         month_c2 = cos(4*pi*month/12),
-         month_c3 = cos(6*pi*month/12),
-         month_c4 = cos(8*pi*month/12),
-         yday_s1 = sin(2*pi*yday/365),
-         yday_s2 = sin(4*pi*yday/365),
-         yday_s3 = sin(6*pi*yday/365),
-         yday_s4 = sin(8*pi*yday/365),
-         yday_c1 = cos(2*pi*yday/365),
-         yday_c2 = cos(4*pi*yday/365),
-         yday_c3 = cos(6*pi*yday/365),
-         yday_c4 = cos(8*pi*yday/365)) %>%
-  drop_na(c(ndvi_temporal, veg_herby, canopy_01, sl_)) %>% 
-  dplyr::select(!(burst_:case_))
-
-```
-
-Filtering by animals that have more than a year of data
-
-```{r}
-
-buffalo_year_ids <- c(2005, 2014, 2018, 2022, 2024, 2154, 2158, 2327, 2354, 2387)
-buffalo_CLR_year <- buffalo_CLR %>% filter(id %in% buffalo_year_ids)
-unique(buffalo_CLR_year$id)
-
-```
-
+Import buffalo telemetry data using data prep file
 
 ```{r}
 
@@ -127,8 +56,6 @@ ggplot() +
   theme_classic()
 
 ```
-
-
 
 Tentative movement parameters from random sampling
 
@@ -443,6 +370,8 @@ points(buffalo_month_subset$x1, buffalo_month_subset$y1)
 
 ```
 
+
+
 ```{r}
 
 for(i in 1:12) {
@@ -473,6 +402,186 @@ cor(buffalo_CLR_year$veg_herby, buffalo_CLR_year$canopy_scaled)
 ```
 
 
+
+```{r}
+
+formula_glmmtmb <- y ~ -1 +
+                           # ndvi_scaled +
+                           #  I(ndvi_scaled^2) +
+                           poly(ndvi_scaled, degree = 1, raw = TRUE) +
+                           poly(ndvi_s1, degree = 1, raw = TRUE) +
+                           poly(ndvi_s2, degree = 1, raw = TRUE) +
+                           poly(ndvi_c1, degree = 1, raw = TRUE) +
+                           poly(ndvi_c2, degree = 1, raw = TRUE) +
+                            # slope_scaled +
+                            # I(slope_scaled^2) +
+                             # herby_scaled +
+                             # poly(veg_herby, degree = 1, raw = TRUE) +
+                            # elev_log +
+                            # I(elev_log^2) +
+                             # poly(water_dist, degree = 2, raw = TRUE) +
+                             # poly(water_dist_log, degree = 2, raw = TRUE) +
+                             # water_dist +
+                            # water_dist_log +
+                            # I(water_dist_log^2) +
+                            # canopy_scaled +
+                            # I(canopy_scaled^2) +
+                           poly(canopy_scaled, degree = 1, raw = TRUE) +
+                           poly(canopy_s1, degree = 1, raw = TRUE) +
+                           poly(canopy_s2, degree = 1, raw = TRUE) +
+                           poly(canopy_c1, degree = 1, raw = TRUE) +
+                           poly(canopy_c2, degree = 1, raw = TRUE) +
+                             
+                             sl +
+                            sl_s1 +
+                            sl_s2 +
+                            sl_c1 +
+                            sl_c2 +
+  
+                             log_sl +
+                            log_sl_s1 +
+                            log_sl_s2 +
+                            log_sl_c1 +
+                            log_sl_c2 +
+  
+                             cos_ta +
+                            cos_ta_s1 +
+                            cos_ta_s2 +
+                            cos_ta_c1 +
+                            cos_ta_c2 +
+                             
+                            # poly(sl, degree = 1, raw = TRUE) +
+                            # poly(log_sl, degree = 1, raw = TRUE) +
+                            #  poly(cos_ta, degree = 1, raw = TRUE) +
+                             
+                             (1 | step_id) +
+                           # (0 + ndvi_scaled | id) +
+                             (0 + poly(ndvi_scaled, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(ndvi_s1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(ndvi_s2, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(ndvi_c1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(ndvi_c2, degree = 1, raw = TRUE) | id) +
+                           # (0 + slope_scaled | id) +
+                             # (0 + poly(veg_herby, degree = 1, raw = TRUE) | id) +
+                             # (0 + poly(water_dist, degree = 1, raw = TRUE) | id) +
+                           # (0 + canopy_scaled | id)
+                             (0 + poly(canopy_scaled, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(canopy_s1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(canopy_s2, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(canopy_c1, degree = 1, raw = TRUE)| id) +
+                           (0 + poly(canopy_c2, degree = 1, raw = TRUE) | id) +
+  
+                            (0 + poly(sl, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(sl_s1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(sl_s2, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(sl_c1, degree = 1, raw = TRUE)| id) +
+                           (0 + poly(sl_c2, degree = 1, raw = TRUE) | id) +
+  
+                            (0 + poly(log_sl, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(log_sl_s1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(log_sl_s2, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(log_sl_c1, degree = 1, raw = TRUE)| id) +
+                           (0 + poly(log_sl_c2, degree = 1, raw = TRUE) | id) +
+  
+                            (0 + poly(cos_ta, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(cos_ta_s1, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(cos_ta_s2, degree = 1, raw = TRUE) | id) +
+                           (0 + poly(cos_ta_c1, degree = 1, raw = TRUE)| id) +
+                           (0 + poly(cos_ta_c2, degree = 1, raw = TRUE) | id)
+
+```
+
+With harmonics and quadratics
+
+```{r}
+
+formula_glmmtmb <- y ~ -1 +
+                           # ndvi_scaled +
+                           #  I(ndvi_scaled^2) +
+                           poly(ndvi_scaled, degree = 2, raw = FALSE) +
+                           poly(ndvi_s1, degree = 2, raw = FALSE) +
+                           poly(ndvi_s2, degree = 2, raw = FALSE) +
+                           poly(ndvi_c1, degree = 2, raw = FALSE) +
+                           poly(ndvi_c2, degree = 2, raw = FALSE) +
+                            # slope_scaled +
+                            # I(slope_scaled^2) +
+                             # herby_scaled +
+                             # poly(veg_herby, degree = 2, raw = FALSE) +
+                            # elev_log +
+                            # I(elev_log^2) +
+                             # poly(water_dist, degree = 2, raw = TRUE) +
+                             # poly(water_dist_log, degree = 2, raw = TRUE) +
+                             # water_dist +
+                            # water_dist_log +
+                            # I(water_dist_log^2) +
+                            # canopy_scaled +
+                            # I(canopy_scaled^2) +
+                           poly(canopy_scaled, degree = 2, raw = FALSE) +
+                           poly(canopy_s1, degree = 2, raw = FALSE) +
+                           poly(canopy_s2, degree = 2, raw = FALSE) +
+                           poly(canopy_c1, degree = 2, raw = FALSE) +
+                           poly(canopy_c2, degree = 2, raw = FALSE) +
+                             
+                             sl +
+                            sl_s1 +
+                            sl_s2 +
+                            sl_c1 +
+                            sl_c2 +
+  
+                             log_sl +
+                            log_sl_s1 +
+                            log_sl_s2 +
+                            log_sl_c1 +
+                            log_sl_c2 +
+  
+                             cos_ta +
+                            cos_ta_s1 +
+                            cos_ta_s2 +
+                            cos_ta_c1 +
+                            cos_ta_c2 +
+                             
+                            # poly(sl, degree = 2, raw = FALSE) +
+                            # poly(log_sl, degree = 2, raw = FALSE) +
+                            #  poly(cos_ta, degree = 2, raw = FALSE) +
+                             
+                             (1 | step_id) +
+                           # (0 + ndvi_scaled | id) +
+                           (0 + poly(ndvi_scaled, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(ndvi_s1, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(ndvi_s2, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(ndvi_c1, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(ndvi_c2, degree = 2, raw = FALSE) | id) +
+                           # (0 + slope_scaled | id) +
+                             # (0 + poly(veg_herby, degree = 2, raw = FALSE) | id) +
+                             # (0 + poly(water_dist, degree = 2, raw = FALSE) | id) +
+                           # (0 + canopy_scaled | id)
+                           (0 + poly(canopy_scaled, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(canopy_s1, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(canopy_s2, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(canopy_c1, degree = 2, raw = FALSE) | id) +
+                           (0 + poly(canopy_c2, degree = 2, raw = FALSE) | id) +
+  
+                           (0 + sl | id) +
+                           (0 + sl_s1 | id) +
+                           (0 + sl_s2 | id) +
+                           (0 + sl_c1 | id) +
+                           (0 + sl_c2 | id) +
+  
+                           (0 + log_sl | id) +
+                           (0 + log_sl_s1 | id) +
+                           (0 + log_sl_s2 | id) +
+                           (0 + log_sl_c1 | id) +
+                           (0 + log_sl_c2 | id) +
+  
+                           (0 + cos_ta | id) +
+                           (0 + cos_ta_s1 | id) +
+                           (0 + cos_ta_s2 | id) +
+                           (0 + cos_ta_c1 | id) +
+                           (0 + cos_ta_c2 | id)
+
+```
+
+
 ```{r}
 
 # month_no <- 7
@@ -481,54 +590,11 @@ cor(buffalo_CLR_year$veg_herby, buffalo_CLR_year$canopy_scaled)
 # sum(is.na(buffalo_CLR_year$water_dist_log))
 
 tic()
-glmmTMB_model <- glmmTMB(y ~ -1 +
-                           # ndvi_scaled +
-                           #  I(ndvi_scaled^2) +
-                            poly(ndvi_scaled, degree = 2, raw = FALSE) +
-                           poly(ndvi_scaled, degree = 2, raw = FALSE):yday_s1 +
-                           poly(ndvi_scaled, degree = 2, raw = FALSE):yday_s2 +
-                           poly(ndvi_scaled, degree = 2, raw = FALSE):yday_c1 +
-                           poly(ndvi_scaled, degree = 2, raw = FALSE):yday_c2 +
-                            # slope_scaled +
-                            # I(slope_scaled^2) +
-                             # herby_scaled +
-                             # poly(veg_herby, degree = 1, raw = FALSE) +
-                            # elev_log +
-                            # I(elev_log^2) +
-                             # poly(water_dist, degree = 2, raw = FALSE) +
-                             # poly(water_dist_log, degree = 2, raw = FALSE) +
-                             # water_dist +
-                            # water_dist_log +
-                            # I(water_dist_log^2) +
-                            # canopy_scaled +
-                            # I(canopy_scaled^2) +
-                             poly(canopy_scaled, degree = 2, raw = FALSE) +
-                           poly(canopy_scaled, degree = 2, raw = FALSE):yday_s1 +
-                           poly(canopy_scaled, degree = 2, raw = FALSE):yday_s2 +
-                           poly(canopy_scaled, degree = 2, raw = FALSE):yday_c1 +
-                           poly(canopy_scaled, degree = 2, raw = FALSE):yday_c2 +
-                             
-                             sl +
-                             log_sl +
-                             cos_ta +
-                             
-                            # poly(sl, degree = 1, raw = FALSE) +
-                            # poly(log_sl, degree = 1, raw = FALSE) +
-                            #  poly(cos_ta, degree = 1, raw = FALSE) +
-                             
-                             (1 | step_id) +
-                           # (0 + ndvi_scaled | id) +
-                             (0 + poly(ndvi_scaled, degree = 2, raw = FALSE) | id) +
-                           # (0 + slope_scaled | id) +
-                             # (0 + poly(veg_herby, degree = 1, raw = FALSE) | id) +
-                             # (0 + poly(water_dist, degree = 2, raw = FALSE) | id) +
-                           # (0 + canopy_scaled | id)
-                             (0 + poly(canopy_scaled, degree = 2, raw = FALSE) | id),
-                           
-                         data = buffalo_CLR_year, 
+glmmTMB_model <- glmmTMB(formula = formula_glmmtmb,
+                         data = buffalo_CLR_year_harmonics, 
                          family = poisson,
-                         map = list(theta = factor(c(NA, 1:6))),
-                         start = list(theta = c(log(1e3), rep(0,6))) # 
+                         map = list(theta = factor(c(NA, 1:45))),
+                         start = list(theta = c(log(1e3), rep(0,45))) # 
                          )
 toc()
 
